--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet"   href="css/styles.css">  
+    <link rel="stylesheet" href="studyBuddyStyle.css">  
 
     <!--Font Awesome -->
     <script src="https://kit.fontawesome.com/0f95776d01.js" crossorigin="anonymous"></script>
@@ -49,8 +49,7 @@
             <i class="fa-brands fa-google-play"></i> Download</button>
       </div>
       <div class="col-lg-6">
-        <img class="title-image" src="images/iphone-400.png" alt="iphone with study buddy app">
-
+        <img class="title-image" src="studyImages/iphone-400.png" alt="iphone with study buddy app">
       </div>
     </div>
   </section>
@@ -85,19 +84,19 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <h2>I no longer have to study alone. No more cramming. Lower stress!</h2>
-            <img class="testimonial-image" src="images/study-img-300.jpg" alt="study image with buddy by eliott-reyna-Unsplashed.com">
+            <img class="testimonial-image" src="studyImages/study-img-300.jpg" alt="study image with buddy by eliott-reyna-Unsplashed.com">
             <em>Cindy, UCSD</em>
           </div>
       
           <div class="carousel-item">
             <h2> I am so much happier now that I have found my studyBuddy! Yipee!</h2>
-            <img class="testimonial-image" src="images/annie-spratt-unsplash.jpg" alt="image by annie spratt unsplash.com">
+            <img class="testimonial-image" src="studyImages/annie-spratt-unsplash.jpg" alt="image by annie spratt unsplash.com">
             <em> Annie, Stanford University </em>
           </div>
 
           <div class="carousel-item">
             <h2> I have made true friends, I will have my study buddies all through med school! </h2>
-            <img class="testimonial-image" src="images/tamarcus-brown-unsplash.jpg" alt="image by tamarcus brown unsplash.com">
+            <img class="testimonial-image" src="studyImages/tamarcus-brown-unsplash.jpg" alt="image by tamarcus brown unsplash.com">
             <em> Tamarcus, Johns Hopkins</em>
           </div>
         </div>
@@ -114,10 +113,10 @@
 
     <!-- Press -->
   <section id="press">
-    <img class="press-logo" src="images/study-smarter-logo.png" alt="study smarter image">
-    <img class="press-logo" src="images/a-1.png" alt="a1 academy of study image">
-    <img class="press-logo" src="images/game-one.png" alt="game one academic games image">
-    <img class="press-logo" src="images/stellar-grades-academy.png" alt="stellar grades academy image">
+    <img class="press-logo" src="studyImages/study-smarter-logo.png" alt="study smarter image">
+    <img class="press-logo" src="studyImages/a-1.png" alt="a1 academy of study image">
+    <img class="press-logo" src="studyImages/game-one.png" alt="game one academic games image">
+    <img class="press-logo" src="studyImages/stellar-grades-academy.png" alt="stellar grades academy image">
   </section>
 
     <!-- Pricing -->
@@ -188,11 +187,11 @@
   <i class="social-icon fa-solid fa-envelope"></i>
   <p>Copyright 2020 studyBuddy</p>
 </footer>
-    <!-- Optional JavaScript -->
+      
+    <!-- JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   </body>
 </html>
-
